@@ -9,6 +9,9 @@ v3.8.9 (XXXX-XX-XX)
 v3.8.8 (2022-10-17)
 -------------------
 
+* BTS-1070: Fixed query explain not dealing with an aggregate function without
+  arguments and the WINDOW node not being defined as an Ast node type name.
+
 * Fixed BTS-852 (user's saved queries used to disappear after updating user
   profile).
 
